add AUX counters and formatter, extended benchmarks to correlate recall and others
Signed-off-by: Samuel Herman <sherman8915@gmail.com>